# ur_sim

./: .gitignore  README.md  frames.gv
src/fmauch_universal_robot/ur5_gripper_moveit_config/: .setup_assistant  package.xml
src/fmauch_universal_robot/ur5_gripper_moveit_config/config/: fake_controllers.yaml  ur_robot_gazebo.srdf
src/fmauch_universal_robot/ur5_gripper_moveit_config/launch/: arm.rviz  gazebo.launch  planning_context.launch  ros_controllers.launch  sensor_manager.launch.xml
src/fmauch_universal_robot/ur_description/urdf/: ur.xacro
src/fmauch_universal_robot/ur_description/urdf/inc/: ur5_macro.xacro  ur_macro.xacro
src/fmauch_universal_robot/ur_gazebo/: CMakeLists.txt
src/fmauch_universal_robot/ur_gazebo/config/: ur5_controllers.yaml
src/fmauch_universal_robot/ur_gazebo/launch/: arm_world.launch  llm.launch  ur5_bringup.launch  ur5_bringup_all.launch
src/fmauch_universal_robot/ur_gazebo/model/arm/: arm.sdf
src/fmauch_universal_robot/ur_gazebo/object/unit_box_0/: model.sdf
src/fmauch_universal_robot/ur_gazebo/scripts/: arm_control.py  detect.py  llm.py
src/fmauch_universal_robot/ur_gazebo/urdf/: ur.xacro
src/fmauch_universal_robot/ur_gazebo/world/: ur5_cubes.world
src/robotiq/robotiq_2f_85_gripper_gazebo/config/: gazebo_controller.yaml  robotiq_2f_85_gripper_controllers.yaml
src/scripts/: arm_control.py
